# playlike-chess

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  STATUS.md  harness.toml  pyproject.toml
.claude/agents/: codex-review-validator.md
.claude/skills/run-codex-validators/: SKILL.md
.github/workflows/: ci-node.yml  ci-python.yml  codex-review.yml  regen-status.yml
.scratch/imitation-engine/: PRD.md
.scratch/imitation-engine/issues/: 01-random-move-tracer.md  02-toy-ml-tracer.md  03-real-base-model-training.md  04-first-adapter-magnus.md  05-full-roster-and-selector.md  06-stockfish-wasm-comparison-panel.md  07-evaluation-harness.md
.scratch/merge-gate-canary/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  README.md  _template.md
.scratch/merge-gate-measurement/: log.md
.scratch/playlike-chess/: PRD.md
.scratch/playlike-chess/issues/: 02-toy-ml-tracer.md  (+6 more)
docs/: merge-gate-operations.md  merge-gate.md
docs/adr/: 0001-transformer-fen-policy-head.md  0002-split-data-sources.md  0003-closed-roster-devtime-adapters.md  0004-project-name-playlike-chess.md
docs/agents/: issue-tracker.md
scripts/: status.py
src/engine/: AGENTS.md  CONTEXT.md  _smoke_command_injection.py  _smoke_upload_artefact_canary.py  pyproject.toml
src/engine/playlike_engine/: __init__.py  api.py  api_test.py  random_move.py  random_move_test.py
src/training/: AGENTS.md  CONTEXT.md
src/web/: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+75 files in other folders)
