[project]
name = "playlike-chess-engine"
version = "0.0.1"
description = "Playlike Chess — Engine context: FastAPI inference server."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "python-chess>=1.10",
  "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "pyrefly>=0.1",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["playlike_engine"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["playlike_engine"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
